# datamaker-core

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
datamaker/: __main__.py
datamaker/cli/: __init__.py
docs/: contributing.md  index.md
docs/stylesheets/: extra.css
tests/: test_placeholder.py
